update nginx + back-end + i18n + refactor all index.ts

--- a/Application/front-end/public/locales/en/translation.json
+++ b/Application/front-end/public/locales/en/translation.json
@@ -1,4 +1,10 @@
 {
+    "browsing_one": "{{count}} view",
+    "browsing_many": "{{count}} views",
+
+    "date": {
+        "date_ago": "{{date, DATE_AGO}}"
+    },
     "menu": {
         "titles": {
             "you": "You",
